apps/gotify/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gotify
  labels:
    app.kubernetes.io/name: gotify
  annotations:
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: gotify
